--- a/src/app/jokes/containers/jokes/jokes.component.html
+++ b/src/app/jokes/containers/jokes/jokes.component.html
@@ -1,2 +1,6 @@
-<app-joke-card-list [jokes]="jokes$ | async" [loading]="isLoading$ | async" [error]="(error$ | async)" (refresh)="onRefresh()">
+<app-joke-card-list 
+    [jokes]="jokes$ | async" 
+    [loading]="isLoading$ | async" 
+    [error]="(error$ | async)" 
+    (refresh)="onRefresh()">
 </app-joke-card-list>
