--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,22 @@
 <div class="container-fluid">
   <div class="jumbotron text-center">
     <h1>
-      <img class="logo" src="assets/ngx-rocket-logo.png" alt="angular logo"/>
+      <img class="logo" src="assets/ngx-rocket-logo.png" alt="angular logo" />
       <span translate>Hello world !</span>
     </h1>
     <app-loader [isLoading]="isLoading"></app-loader>
     <q [hidden]="isLoading">{{quote}}</q>
   </div>
+
+  <div class="row">
+    <div class="col-12">
+
+      <p *ngIf="online$ | async; else offline">Online</p>
+      <ng-template #offline>
+        <p>offile</p>
+      </ng-template>
+
+    </div>
+  </div>
+
 </div>
