--- a/src/app/jokes/components/joke-card-item/joke-card-item.component.html
+++ b/src/app/jokes/components/joke-card-item/joke-card-item.component.html
@@ -1,6 +1,6 @@
 <div class="card">
-  <div class="card-title">Joke #{{ joke.id }}</div>
   <div class="card-body">
-      {{ joke.joke }}
+    <h5 class="card-title">Joke #{{ joke.id }}</h5>
+    <p class="card-text"> {{ joke.joke }}</p>
   </div>
 </div>
