--- a/src/app/jokes/containers/jokes/jokes.component.html
+++ b/src/app/jokes/containers/jokes/jokes.component.html
@@ -1,4 +1,4 @@
 <div class="container-fluid">
-  <app-joke-card-list [jokes]="jokes$ | async" [loading]="isLoading$ | async" [error]="(error$ | async)" (refresh)="onRefresh()">
+  <app-joke-card-list [jokes]="jokes$ | async" [loading]="isLoading$ | async" [error]="(error$ | async)" (refresh)="onRefresh($event)">
   </app-joke-card-list>
 </div>
