add formbuiler modules

--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -19,6 +19,11 @@
           <i class="fas fa-question-circle"></i>
           <span>Joke</span>
         </a>
+        <a class="nav-item nav-link text-uppercase" routerLink="/formbuiler" routerLinkActive="active">
+          <i class="fas fa-question-circle"></i>
+          <span>Form builer</span>
+        </a>
+        
       </div>
       <div class="navbar-nav ml-auto">
         <div class="nav-item" ngbDropdown placement="bottom-right">
