--- a/src/app/jokes/components/joke-card-list/joke-card-list.component.html
+++ b/src/app/jokes/components/joke-card-list/joke-card-list.component.html
@@ -18,7 +18,7 @@
 </div>
 
 <p>
-  <ngb-alert *ngIf="true" type="danger">
-      An error occurred: {{error.message}}
+  <ngb-alert *ngIf="error" type="danger">
+      An error occurred: {{error['message']}}
   </ngb-alert>
 </p>
