add directive default image

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,4 +23,7 @@
     {{ getUser$ | async | json }}
   </div>
 
+  <img class="img-fluid img-thumbnail rounded" [src]="'this.notfound'" width="300" default="/assets/images/no-image-available.png">
+
+
 </div>
